--- a/MyRecipe2.html
+++ b/MyRecipe2.html
@@ -18,7 +18,7 @@
 
         #cookies{
         position: relative;
-        top:-170px;
+        top:-220px;
         left:250px;
         z-index:10;
         float:left;}
@@ -59,14 +59,14 @@
                 </tr>
             </thead>
 
-            <img id="cookies" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQslNt0Y1iSYZiPGjjn-s2yt9dEdE_aNfHBTQ&usqp=CAU" width="200">
+            <img id="cookies" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Scored_Cookies.jpg/220px-Scored_Cookies.jpg" width="200">
             <tbody>
                <tr>
                 <td> unsalted butter</td>
                <td> 1 cup</td>
                </tr>
                    <tr>
-                <td> sugur(white & brown) </td>
+                <td> sugar(white & brown) </td>
             <td> 1 cup*2</td>
                    </tr>
             <tr>
