--- a/MyRecipe.html
+++ b/MyRecipe.html
@@ -36,7 +36,7 @@
     <body>
        <div id="container">
         <h1> DoubleTree's Cookie Recipe Book</h1>
-       <h1>  Michael's Favorite Choice</h1>
+       <h1>  Michael's Favourite Choice</h1>
         <h2>Contents:</h2>
         
         <ol>
@@ -66,7 +66,7 @@
                <td> 0.5 pound</td>
                </tr>
                    <tr>
-                <td> sugur(white &red) </td>
+                <td> sugar(white &red) </td>
             <td> 0.75 cup*2</td>
                    </tr>
             <tr>
