--- a/MyRecipe2.html
+++ b/MyRecipe2.html
@@ -3,7 +3,15 @@
     <head>
         <title>Project: Recipe 2</title>
         <meta charset="utf-8">
+
+
         <style>
+  html {
+  background-color: #E4E9FD;
+  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
+  min-height: 1000px;
+  
+}
         h1 {color:rgb(14, 235, 217);
         font-size:3em;
         text-shadow:2px 2px #f00;}
