--- a/MyRecipe.html
+++ b/MyRecipe.html
@@ -13,7 +13,7 @@
         <h2>Contents:</h2>
         
         <ol>
-            <li><a href="#RecipeA">Chocolate Cookies</a></li>
+            <li><a href=#RecipeA>Chocolate Cookies</a></li>
             <li><a href="MyRecipe2.html">Peanut Butter Cookies</a></li>
         </ol>
         
