--- a/MyRecipe.html
+++ b/MyRecipe.html
@@ -3,13 +3,14 @@
     <head>
         <title>Project: Recipe book</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
       <link rel="stylesheet" href="styles.css">
     </head>
     
     <body>
        <div id="container">
         <h1> DoubleTree's Cookie Recipe Book</h1>
-       <h1>  Michael's Favourite Choice</h1>
+       <h1>  Michael's Favourite Choice <i class="fas fa-thumbs-up"></i></h1>
         <h2>Contents:</h2>
         
         <ol>
