--- a/MyRecipe.html
+++ b/MyRecipe.html
@@ -22,7 +22,7 @@
         
         <ul>
             <li>Time: 30mins</li>
-            <li>Serves: 3</li>
+            <li><i class="fas fa-info-circle"></i> Serves: 3</li>
         </ul>
         
         <table>
