--- a/MyRecipe2.html
+++ b/MyRecipe2.html
@@ -27,7 +27,7 @@
         
         <ul>
             <li>Time: 60mins</li>
-            <li>Serves: 8</li>
+            <li><i class="fas fa-info-circle"></i> Serves: 8</li>
         </ul>
         
         <table>
