adjusted width and font size

--- a/MyRecipe.html
+++ b/MyRecipe.html
@@ -13,7 +13,7 @@
        <h1>  Michael's Favourite Choice <i class="fas fa-thumbs-up"></i></h1>
         <h2>Contents:</h2>
         
-        <ol>
+        <ol class="subtitle">
             <li><a href=#RecipeA>Chocolate Cookies</a></li>
             <li><a href="MyRecipe2.html">Peanut Butter Cookies</a></li>
         </ol>
