--- a/MyRecipe2.html
+++ b/MyRecipe2.html
@@ -13,6 +13,7 @@
     
     <body>
        <div id="container">
+        <h1> Michael's Favourite Choice </h1>
         <h1> Peanut Butter Cookie Recipe <i class="fas fa-thumbs-up"></i></h1>
        
         <h2>Contents:</h2>
