--- a/MyRecipe2.html
+++ b/MyRecipe2.html
@@ -26,7 +26,7 @@
         
         <h2 id="RecipeB">Peanut Butter Cookies</h2>
         
-        <ul>
+        <ul class="subtitle">
             <li>Time: 60mins</li>
             <li><i class="fas fa-info-circle"></i> Serves: 8</li>
         </ul>
