--- a/MyRecipe2.html
+++ b/MyRecipe2.html
@@ -94,7 +94,10 @@
 <p><strong>Step3:</strong>Roll dough into 1 inch balls and put on baking sheets. Flatten each ball with a fork, making a crisscross pattern. Bake in a preheated 375 degrees F oven for about 10 minutes or until cookies begin to brown.
 </a></em></p>
     </div>
-   
+ <video id="video" controls preload="auto">
+  <source src="audioVideo\MichaelBub.mp4" type="video/mp4"></source>
+  <source src="movie.ogg" type="video/ogg"></source>
+</video>  
  
     </body>   
 </html>
