--- a/MyRecipe.html
+++ b/MyRecipe.html
@@ -120,8 +120,10 @@ Cook’s note: You can freeze the unbaked cookies, and there’s no need to thaw
     <video id="video" controls preload="auto">
       <source src="audioVideo\MichaelBub.mp4" type="video/mp4">
       </source>
-      <source src="movie.ogg" type="video/ogg">
+    <source src="movie.ogg" type="video/ogg">
       </source>
+    <source src="movie.webm" type="video/webm">
+    <source src="movie.theora.ogv" type="video"/>
     </video>
 </div>
     </body>   
