--- a/MyRecipe2.html
+++ b/MyRecipe2.html
@@ -97,6 +97,8 @@
  <video id="video" controls preload="auto">
   <source src="audioVideo\MichaelBub.mp4" type="video/mp4"></source>
   <source src="movie.ogg" type="video/ogg"></source>
+   <source src="movie.webm" type="video/webm">
+  <source src="movie.theora.ogv" type="video"/>
 </video>  
  
     </body>   
